@@ -7,6 +7,9 @@
 	  and classify them as Audio Devices. (For later
 	  use by packaging scripts.)
 
+	* library.c: Generic autodetection of MTP devices
+	  by bypass hack with USB class.
+
 2006-06-26  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Kodak Z650.
